fix download file handler
